@@ -18,6 +18,7 @@
 - Added FlushablePool
 - Added ShapeCache see https://github.com/libgdx/libgdx/pull/3953
 - API Change: moved shape builder logic out of MeshBuilder, see: https://github.com/libgdx/libgdx/pull/3996
+- API Change: changed copy constructor OrderedMap(ObjectMap) to OrderedMap(OrderedMap)
 - API Change: Table reset now calls clearChildren, not clear.
 - Fixed crashes in AndroidMusic.java when isPlaying is called. Errors are now logged only rather than crashing the app.
 - Added emulation of ScreenUtils for GWT
